--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Generic - Phantom by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/mainCV.css" />
+		<link rel="stylesheet" href="assets/css/CV.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -21,14 +21,14 @@
 					<div class="inner">
 
 							<!-- Logo -->
-								<a href="https://amandamlong.github.io/" class="logo">
+								<a href="https://amandamlong.github.io/AmandaMLong/" class="logo">
 									<span class="symbol"><img src="C:\Users\along\Documents\GitHub\Portfolio\Icons\pagelines.svg" alt="" /></span><span class="title">Amanda M Long</span>
 								</a>
 
 				<!-- Nav -->
 						<nav>
 							<ul>
-								<li><a href="About.html">About</a></li>
+								<li><a href="https://amandamlong.github.io/About/">About</a></li>
 								<li><a href="https://amandamlong.github.io/Portfolio/">Portfolio</a></li>
 								<li><a href="https://amandamlong.github.io/CV/">CV</a></li>
 								<li><a href="https://amandamlong.github.io/TravelMap/">Adventures</a></li>
