--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="https://amandamlong.github.io/AmandaMLong/" class="logo">
-									<span class="symbol"><img src="C:\Users\along\Documents\GitHub\Portfolio\Icons\pagelines.svg" alt="" /></span><span class="title">Amanda M Long</span>
+									<span class="symbol"><img src="pagelines.svg" alt="" /></span><span class="title">Amanda M Long</span>
 								</a>
 
 				<!-- Nav -->
