--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
 	<head>
+		<title>AML-CV</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/CV.css" />
@@ -26,7 +27,7 @@
 								<li><a href="https://amandamlong.github.io/About/">About</a></li>
 								<li><a href="https://amandamlong.github.io/Portfolio/">Portfolio</a></li>
 								<li><a href="https://amandamlong.github.io/CV/">CV</a></li>
-								<li><a href="https://amandamlong.github.io/TravelMap/">Adventures</a></li>
+								<li><a href="https://amandamlong.github.io/Adventures/">Adventures</a></li>
 
 							</ul>
 						</nav>
