--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE HTML>
-
 <html>
 	<head>
 		<title>AML-CV</title>
@@ -15,97 +14,83 @@
 				<!-- Header -->
 					<header id="header">
 					<div class="inner">
-
-							<!-- Logo -->
-								<a href="https://amandamlong.github.io" class="logo">
-									<span class="symbol"><img src="pagelines.svg" alt="" /></span>
-										<span class="title"><font color="a5a58d">Amanda M Long</font></span>
-								</a>
-
-				<!-- Nav -->
+						<!-- Logo -->
+						<a href="https://amandamlong.github.io" class="logo">
+							<span class="symbol"><img src="pagelines.svg" alt="" /></span>
+							<span class="title"><font color="a5a58d">Amanda M Long</font></span>
+						</a>
+						<!-- Nav -->
 						<nav>
 							<ul>
 								<li><a href="https://amandamlong.github.io/About/">About</a></li>
 								<li><a href="https://amandamlong.github.io/Portfolio/">Portfolio</a></li>
 								<li><a href="https://amandamlong.github.io/CV/">CV</a></li>
 								<li><a href="https://amandamlong.github.io/Adventures/">Adventures</a></li>
-
 							</ul>
 						</nav>
-
 					</header>
-
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<h2><span><font color="a5a58d">Curriculum Vitae</font></span></h2>
-							<h4>Amanda M Long</h4>
-							<h5> Spatial Landscape Ecologist</h5>
-
-							<section>
-								<footer id="footer">
-								<ul class="icons">
+						<!-- Main -->
+						<div id="main">
+							<div class="inner">
+								<h2><span><font color="a5a58d">Curriculum Vitae</font></span></h2>
+								<h4>Amanda M Long</h4>
+								<h5> Spatial Landscape Ecologist</h5>
+								<section>
+									<footer id="footer">
+										<ul class="icons">
 									<li><a href="https://twitter.com/_AmandaMLong" class="icon brands style1 fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.linkedin.com/in/amanda--long/" class="icon brands style1 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 									<li><a href="mailto:along3460@gmail.com" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
 									<li><a href="https://amandamlong.github.io/" class="icon brands style1 fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</section>
-
-							<!-- QUALIFICATIONS -->
-								<section>
-									<h3>Qualifications</h3>
-									<div class="table-wrapper">
-										<table>
-											<col style="width:33%">
-											<col style="width:33%">
-											<col style="width:33%">
-											<thead>
-												<tr>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td style="text-align: center; vertical-align: middle;">
-													Geospatial Analysis <br>
-														Remote Sensing <br>
-														Python, SQL, R, HTML
-													</td>
-													<td style="text-align: center; vertical-align: middle;">
-														Data Management | Spatial & Non-spatial <br>
-														Data Analysis & Visualization <br>
-														Presentation Development <br>
-													<td style="text-align: center; vertical-align: middle;">
-													Science Communication <br>
-													Field Data Collection <br>
-													Wildlife Handling
-													</td>
-												</tr>
-											</tfoot>
-										</table>
-
-									<dl>
-										<dt>Technical</dt>
-										<dd>
-											<p>ESRI ArcGIS, Microsoft Office Suite,
-														Remote Sensing, Python, SQL, R, HTML5/CSS, Data Management (Spatial
-														& Non-spatial), Data Analysis, Data Visualization, Presentation
-														Development, Google Earth.</p>
-										</dd>
-										<dt>Field</dt>
-										<dd>
-											<p>GPS, Timber Cruise,
-														Small Mammal Trapping and Handling,
-														Mist Netting, Radio Telemetry, Acoustic Monitoring,
-														Camera Trapping, Remote Fieldwork.</p>
-										</dd>
-										<dt>Soft</dt>
-										<dd>
-											<p>Science Communication, Detail Oriented,
-														Troubleshooting, Time Management.</p><br>
-										</dd>
-									</dl>
-
+										</ul>
+								</section>
+									
+						<!-- QUALIFICATIONS -->
+			<section>
+				<h3>Qualifications</h3>
+				<div class="table-wrapper">
+					<table>
+						<col style="width:33%">
+						<col style="width:33%">
+						<col style="width:33%">
+						<thead>
+							<tr></tr>
+						</thead>
+						<tbody>
+						<tr>
+							<td style="text-align: center; vertical-align: middle;">
+								Geospatial Analysis <br>
+								Remote Sensing <br>
+								Python, SQL, R, HTML</td>
+							<td style="text-align: center; vertical-align: middle;">
+								Data Management | Spatial & Non-spatial <br>
+								Data Analysis & Visualization <br>
+								Presentation Development </td>
+							<td style="text-align: center; vertical-align: middle;">
+								Science Communication <br>
+								Field Data Collection <br>
+								Wildlife Handling</td>
+						</tr>
+						</tfoot>
+					</table>
+				<dl>
+					<dt>Technical</dt>
+					<dd>
+					<p>ESRI ArcGIS, Microsoft Office Suite,
+					Remote Sensing, Python, SQL, R, HTML5/CSS, Data Management (Spatial
+					& Non-spatial), Data Analysis, Data Visualization, Presentation
+					Development, Google Earth.</p></dd>
+					<dt>Field</dt>
+					<dd>
+					<p>GPS, Timber Cruise,
+					Small Mammal Trapping and Handling,
+					Mist Netting, Radio Telemetry, Acoustic Monitoring,
+					Camera Trapping, Remote Fieldwork.</p></dd>
+					<dt>Soft</dt>
+					<dd>
+					<p>Science Communication, Detail Oriented,
+					Troubleshooting, Time Management.</p><br></dd>
+				</dl>
 
 							<!-- EDUCATION -->
 								<section>
@@ -465,7 +450,7 @@
 												<tr>
 													<td><b>MMC Third Annual Student Showcase</b> (MMC)<br>
 														<p class="hangingindent"><b>Long AM</b>, Lombard A, Johnson L, Wagner J. Mice DNA barcoding.</p>
-															*Received Student Showcase Award
+														<p class="indent">*Received Student Showcase Award</p>
 														</td>
 													<td style="text-align: center; vertical-align: middle;">April 2018</td>
 													</tr>
