--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 						<!-- Logo -->
 						<a href="https://amandamlong.github.io" class="logo">
 							<span class="symbol"><img src="pagelines.svg" alt="" /></span>
-							<span class="title"><font color="a5a58d">Amanda M Long</font></span>
+							<span class="title">Amanda M Long</span>
 						</a>
 						<!-- Nav -->
 						<nav>
