--- a/index.html
+++ b/index.html
@@ -1,100 +1,104 @@
+<!-- CV -->
+
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>AML-CV</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/CV.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Header -->
-					<header id="header">
-					<div class="inner">
-						<!-- Logo -->
-						<a href="https://amandamlong.github.io" class="logo">
-							<span class="symbol"><img src="pagelines.svg" alt="" /></span>
-							<span class="title">Amanda M Long</span>
-						</a>
-						<!-- Nav -->
-						<nav>
-							<ul>
-								<li><a href="https://amandamlong.github.io/About/">About</a></li>
-								<li><a href="https://amandamlong.github.io/Portfolio/">Portfolio</a></li>
-								<li><a href="https://amandamlong.github.io/CV/">CV</a></li>
-								<li><a href="https://amandamlong.github.io/Adventures/">Adventures</a></li>
-							</ul>
-						</nav>
-					</header>
-						<!-- Main -->
-						<div id="main">
-							<div class="inner">
-								<h2><span><font color="a5a58d">Curriculum Vitae</font></span></h2>
-								<h4>Amanda M Long</h4>
-								<h5> Spatial Landscape Ecologist</h5>
-								<section>
-									<footer id="footer">
-										<ul class="icons">
+<head>
+	<title>AML-CV</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/CV.css" />
+	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
+<body class="is-preload">
+	<div id="wrapper">
+		
+		<!-- HEADER / HOME PAGE -->
+		<header id="header">
+			<div class="inner">
+				<a href="https://amandamlong.github.io" class="logo">
+					<span class="symbol"><img src="pagelines.svg" alt="" /></span>
+					<span class="title">Amanda M Long</span></a>
+		<!-- NAVIGATION -->
+		<nav>
+			<ul>
+			<li><a href="https://amandamlong.github.io/About/">About</a></li>
+			<li><a href="https://amandamlong.github.io/Portfolio/">Portfolio</a></li>
+			<li><a href="https://amandamlong.github.io/CV/">CV</a></li>
+			<li><a href="https://amandamlong.github.io/Adventures/">Adventures</a></li>
+			</ul>
+		</nav>
+		</header>
+							<h1><span>Curriculum Vitae</span></h1>
+							<h2>Amanda M Long</h2>
+							<h3> Spatial Landscape Ecologist</h3>
+							<section>
+								<footer id="footer">
+								<ul class="icons">
 									<li><a href="https://twitter.com/_AmandaMLong" class="icon brands style1 fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.linkedin.com/in/amanda--long/" class="icon brands style1 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 									<li><a href="mailto:along3460@gmail.com" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
 									<li><a href="https://amandamlong.github.io/" class="icon brands style1 fa-github"><span class="label">GitHub</span></a></li>
-										</ul>
-								</section>
-									
-						<!-- QUALIFICATIONS -->
-			<section>
-				<h3>Qualifications</h3>
-				<div class="table-wrapper">
-					<table>
-						<col style="width:33%">
-						<col style="width:33%">
-						<col style="width:33%">
-						<thead>
-							<tr></tr>
-						</thead>
-						<tbody>
-						<tr>
-							<td style="text-align: center; vertical-align: middle;">
-								Geospatial Analysis <br>
-								Remote Sensing <br>
-								Python, SQL, R, HTML</td>
-							<td style="text-align: center; vertical-align: middle;">
-								Data Management | Spatial & Non-spatial <br>
-								Data Analysis & Visualization <br>
-								Presentation Development </td>
-							<td style="text-align: center; vertical-align: middle;">
-								Science Communication <br>
-								Field Data Collection <br>
-								Wildlife Handling</td>
-						</tr>
-						</tfoot>
-					</table>
-				<dl>
-					<dt>Technical</dt>
-					<dd>
-					<p>ESRI ArcGIS, Microsoft Office Suite,
-					Remote Sensing, Python, SQL, R, HTML5/CSS, Data Management (Spatial
-					& Non-spatial), Data Analysis, Data Visualization, Presentation
-					Development, Google Earth.</p></dd>
-					<dt>Field</dt>
-					<dd>
-					<p>GPS, Timber Cruise,
-					Small Mammal Trapping and Handling,
-					Mist Netting, Radio Telemetry, Acoustic Monitoring,
-					Camera Trapping, Remote Fieldwork.</p></dd>
-					<dt>Soft</dt>
-					<dd>
-					<p>Science Communication, Detail Oriented,
-					Troubleshooting, Time Management.</p><br></dd>
-				</dl>
+								</ul>
+							</section>
+
+							<!-- QUALIFICATIONS -->
+								<section>
+									<h4>Qualifications</h4>
+									<div class="table-wrapper">
+										<table>
+											<col style="width:33%">
+											<col style="width:33%">
+											<col style="width:33%">
+											<thead>
+												<tr>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td style="text-align: center; vertical-align: middle;">
+													Geospatial Analysis <br>
+														Remote Sensing <br>
+														Python, SQL, R, HTML
+													</td>
+													<td style="text-align: center; vertical-align: middle;">
+														Data Management | Spatial & Non-spatial <br>
+														Data Analysis & Visualization <br>
+														Presentation Development <br>
+													<td style="text-align: center; vertical-align: middle;">
+													Science Communication <br>
+													Field Data Collection <br>
+													Wildlife Handling
+													</td>
+												</tr>
+											</tfoot>
+										</table>
+
+									<dl>
+										<dt>Technical</dt>
+										<dd>
+											<p>ESRI ArcGIS, Microsoft Office Suite,
+														Remote Sensing, Python, SQL, R, HTML5/CSS, Data Management (Spatial
+														& Non-spatial), Data Analysis, Data Visualization, Presentation
+														Development, Google Earth.</p>
+										</dd>
+										<dt>Field</dt>
+										<dd>
+											<p>GPS, Timber Cruise,
+														Small Mammal Trapping and Handling,
+														Mist Netting, Radio Telemetry, Acoustic Monitoring,
+														Camera Trapping, Remote Fieldwork.</p>
+										</dd>
+										<dt>Soft</dt>
+										<dd>
+											<p>Science Communication, Detail Oriented,
+														Troubleshooting, Time Management.</p><br>
+										</dd>
+									</dl>
+
 
 							<!-- EDUCATION -->
 								<section>
-									<h3>Education</h3>
+									<h5>Education</h5>
 									<div class="table-wrapper">
 										<table>
 											<col style="width:85%">
@@ -126,7 +130,7 @@
 
 							<!-- CERTIFICATIONS -->
 								<section>
-									<h3>Certification</h3>
+									<h6>Certification</h6>
 									<div class="table-wrapper">
 										<table>
 											<col style="width:85%">
@@ -154,7 +158,7 @@
 
 							<!-- WORK EXPERIENCE -->
 								<section>
-									<h3>Work Experience</h3>
+									<h6>Work Experience</h6>
 									<div class="table-wrapper">
 										<table>
 											<col style="width:85%">
@@ -221,7 +225,7 @@
 
 							<!-- RESEARCH EXPERIENCE -->
 								<section>
-									<h3>Research Experience</h3>
+									<h6>Research Experience</h6>
 									<div class="table-wrapper">
 										<table>
 											<col style="width:85%">
@@ -311,7 +315,7 @@
 
 							<!-- RESEARCH EXPERIENCE -->
 								<section>
-									<h3>Field Experience</h3>
+									<h6>Field Experience</h6>
 									<div class="table-wrapper">
 										<table>
 											<col style="width:85%">
@@ -414,7 +418,7 @@
 
 							<!-- PUBLICATIONS -->
 								<section>
-									<h3>Publications</h3>
+									<h6>Publications</h6>
 									<div class="table-wrapper">
 										<table>
 											<col style="width:100%">
@@ -437,7 +441,7 @@
 
 							<!-- POSTER PRESENTATIONS -->
 								<section>
-									<h3>Presentations</h3>
+									<h6>Presentations</h6>
 									<div class="table-wrapper">
 										<table>
 											<col style="width:85%">
@@ -450,12 +454,11 @@
 												<tr>
 													<td><b>MMC Third Annual Student Showcase</b> (MMC)<br>
 														<p class="hangingindent"><b>Long AM</b>, Lombard A, Johnson L, Wagner J. Mice DNA barcoding.</p>
-														<p class="indent">*Received Student Showcase Award</p>
+															<p class="indent">*Received Student Showcase Award></p>
 														</td>
 													<td style="text-align: center; vertical-align: middle;">April 2018</td>
 													</tr>
 												<tr>
-
 													<td><b>MMC Science Department</b> (MMC)<br>
 														<p class="hangingindent"><b>Long AM</b>, Lombard A, Wagner J. The effect different concentrations of NaCl has on plant root peroxidase.</p>
 														</td>
@@ -467,7 +470,7 @@
 								</section>
 
 
-											<hr />
+<hr />
 
 				<!-- Footer -->
 					<footer id="footer">
