--- a/index.html
+++ b/index.html
@@ -2,38 +2,44 @@
 
 <!DOCTYPE HTML>
 <html>
-<head>
-	<title>AML-CV</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/CV.css" />
-	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-</head>
-<body class="is-preload">
-	<div id="wrapper">
-		
-		<!-- HEADER / HOME PAGE -->
-		<header id="header">
-			<div class="inner">
-				<a href="https://amandamlong.github.io" class="logo">
-					<span class="symbol"><img src="pagelines.svg" alt="" /></span>
-					<span class="title">Amanda M Long</span></a>
-		<!-- NAVIGATION -->
-		<nav>
-			<ul>
-			<li><a href="https://amandamlong.github.io/About/">About</a></li>
-			<li><a href="https://amandamlong.github.io/Portfolio/">Portfolio</a></li>
-			<li><a href="https://amandamlong.github.io/CV/">CV</a></li>
-			<li><a href="https://amandamlong.github.io/Adventures/">Adventures</a></li>
-			</ul>
-		</nav>
-		</header>
-							<h1><span>Curriculum Vitae</span></h1>
-							<h2>Amanda M Long</h2>
-							<h3> Spatial Landscape Ecologist</h3>
-							<section>
-								<footer id="footer">
-								<ul class="icons">
+	<head>
+		<title>AML-CV</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/CV.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Header -->
+					<header id="header">
+					<div class="inner">
+						<!-- Logo -->
+						<a href="https://amandamlong.github.io" class="logo">
+							<span class="symbol"><img src="pagelines.svg" alt="" /></span>
+							<span class="title">Amanda M Long</span>
+						</a>
+						<!-- Nav -->
+						<nav>
+							<ul>
+								<li><a href="https://amandamlong.github.io/About/">About</a></li>
+								<li><a href="https://amandamlong.github.io/Portfolio/">Portfolio</a></li>
+								<li><a href="https://amandamlong.github.io/CV/">CV</a></li>
+								<li><a href="https://amandamlong.github.io/Adventures/">Adventures</a></li>
+							</ul>
+						</nav>
+					</header>
+						<!-- Main -->
+						<div id="main">
+							<div class="inner">
+								<h1><span>Curriculum Vitae</span></h1>
+								<h2>Amanda M Long</h2>
+								<h3> Spatial Landscape Ecologist</h3>
+								<section>
+									<footer id="footer">
+										<ul class="icons">
 									<li><a href="https://twitter.com/_AmandaMLong" class="icon brands style1 fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.linkedin.com/in/amanda--long/" class="icon brands style1 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 									<li><a href="mailto:along3460@gmail.com" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
