--- a/index.html
+++ b/index.html
@@ -83,21 +83,21 @@
 										<dt>Technical</dt>
 										<dd>
 											<p>ESRI ArcGIS, Microsoft Office Suite,
-														Remote Sensing, Python, SQL, R, HTML5/CSS, Data Management (Spatial
-														& Non-spatial), Data Analysis, Data Visualization, Presentation
-														Development, Google Earth.</p>
+												Remote Sensing, Python, SQL, R, Troubleshooting, Data Management (Spatial
+												& Non-spatial), Data Analysis, Data Visualization, Presentation
+												Development, HTML/CSS, JavaScript, Google Earth.</p>
 										</dd>
 										<dt>Field</dt>
 										<dd>
 											<p>GPS, Timber Cruise,
-														Small Mammal Trapping and Handling,
-														Mist Netting, Radio Telemetry, Acoustic Monitoring,
-														Camera Trapping, Remote Fieldwork.</p>
+											Small Mammal Trapping and Handling,
+											Mist Netting, Radio Telemetry, Acoustic Monitoring,
+											Camera Trapping, Remote Fieldwork.</p>
 										</dd>
 										<dt>Soft</dt>
 										<dd>
 											<p>Science Communication, Detail Oriented,
-														Troubleshooting, Time Management.</p><br>
+											Time Management.</p><br>
 										</dd>
 									</dl>
 
