--- a/index.html
+++ b/index.html
@@ -1,51 +1,50 @@
-<!-- CV -->
-
 <!DOCTYPE HTML>
+
 <html>
 	<head>
 		<title>AML-CV</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<!-- user-scalable=no: website does NOT allow user to Zoom -->
+		<!-- user-scalable=no: website DOES allow user to Zoom -->
 		<link rel="stylesheet" href="assets/css/CV.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-		<!-- Wrapper -->
-			<div id="wrapper">
+	<div id="wrapper">
 
-				<!-- Header -->
-					<header id="header">
-					<div class="inner">
-						<!-- Logo -->
-						<a href="https://amandamlong.github.io" class="logo">
-							<span class="symbol"><img src="pagelines.svg" alt="" /></span>
-							<span class="title">Amanda M Long</span>
-						</a>
-						<!-- Nav -->
-						<nav>
-							<ul>
-								<li><a href="https://amandamlong.github.io/About/">About</a></li>
-								<li><a href="https://amandamlong.github.io/Portfolio/">Portfolio</a></li>
-								<li><a href="https://amandamlong.github.io/CV/">CV</a></li>
-								<li><a href="https://amandamlong.github.io/TravelMap/">Adventures</a></li>
-							</ul>
-						</nav>
-					</header>
-						<!-- Main -->
-						<div id="main">
-							<div class="inner">
-								<h1><span>Curriculum Vitae</span></h1>
-								<h2>Amanda M Long</h2>
-								<h3> Spatial Landscape Ecologist</h3>
-								<section>
-									<footer id="footer">
-										<ul class="icons">
-									<li><a href="https://twitter.com/_AmandaMLong" class="icon brands style1 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://www.linkedin.com/in/amanda--long/" class="icon brands style1 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-									<li><a href="mailto:along3460@gmail.com" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
-									<li><a href="https://amandamlong.github.io/" class="icon brands style1 fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</section>
+		<!-- Header -->
+		<header id="header">
+			<div class="inner">
+				<a href="https://amandamlong.github.io" class="logo">
+					<span class="symbol"><img src="pagelines.svg" alt="" /></span>
+					<span class="title">Amanda M Long</span>
+				</a>
+
+				<!-- Nav -->
+				<nav><ul>
+					<li><a href="https://amandamlong.github.io/About/">About</a></li>
+					<li><a href="https://amandamlong.github.io/Portfolio/">Portfolio</a></li>
+					<li><a href="https://amandamlong.github.io/CV/">CV</a></li>
+					<li><a href="https://amandamlong.github.io/Adventures/">Adventures</a></li>
+				</ul></nav>
+		</header>
+
+		<!-- Main -->
+		<div id="main">
+			<div class="inner">
+				<h1><span>Curriculum Vitae</span></h1>
+				<h2>Amanda M Long</h2>
+				<h3> Spatial Landscape Ecologist</h3>
+				<section>
+					<footer id="footer">
+						<ul class="icons">
+							<li><a href="https://twitter.com/_AmandaMLong" class="icon brands style1 fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.linkedin.com/in/amanda--long/" class="icon brands style1 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							<li><a href="mailto:along3460@gmail.com" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://amandamlong.github.io/" class="icon brands style1 fa-github"><span class="label">GitHub</span></a></li>
+						</ul>
+				</section>
 
 							<!-- QUALIFICATIONS -->
 								<section>
@@ -83,21 +82,21 @@
 										<dt>Technical</dt>
 										<dd>
 											<p>ESRI ArcGIS, Microsoft Office Suite,
-												Remote Sensing, Python, SQL, R, Troubleshooting, Data Management (Spatial
-												& Non-spatial), Data Analysis, Data Visualization, Presentation
-												Development, HTML/CSS, JavaScript, Google Earth.</p>
+														Remote Sensing, Python, SQL, R, HTML5/CSS, Data Management (Spatial
+														& Non-spatial), Data Analysis, Data Visualization, Presentation
+														Development, Google Earth.</p>
 										</dd>
 										<dt>Field</dt>
 										<dd>
 											<p>GPS, Timber Cruise,
-											Small Mammal Trapping and Handling,
-											Mist Netting, Radio Telemetry, Acoustic Monitoring,
-											Camera Trapping, Remote Fieldwork.</p>
+														Small Mammal Trapping and Handling,
+														Mist Netting, Radio Telemetry, Acoustic Monitoring,
+														Camera Trapping, Remote Fieldwork.</p>
 										</dd>
 										<dt>Soft</dt>
 										<dd>
 											<p>Science Communication, Detail Oriented,
-											Time Management.</p><br>
+														Troubleshooting, Time Management.</p><br>
 										</dd>
 									</dl>
 
@@ -176,25 +175,33 @@
 											<tr>
 												<tr>
 													<td><b>Research Assistant</b> (UNT) <br>
-														<i>Global Corridor Efficacy Project</i><br>
+														<i>Global Corridor Efficacy Project</i> • <i><a href="https://www.docorridorswork.com/">Do Corridors Work?</a></i><br>
+
 														<ul>
-													<li>Designed an algorithm for project collaborators to implement spatial analysis,
-														conversion, management, and map automation across 16+ landscapes, internationally.</li>
-													<li>Developed and cultivated strong rapports with local collaborators in
-														Nicaragua, Kenya, Italy.</li>
-													<li>Supported community-led conservation efforts;
-														learned local decision-making processes and needs.</li>
-													<li>Assisted with the implementation of field sampling and
-														training collaborators in field protocols.</li>
-													<li>Trained colleagues on GIS procedures and geodatabase management.</li>
-													<li>Responsible for administrating geospatial lab computer systems to facilitate program use.</li>
-													<li>Assisted with the international transportation of field equipment to and from new study sites.</li>
+															<li>Collected, created, and analyzed geospatial data; managed >2 TB spatial and non-spatial databases;
+																maintained record of methods and troubleshooting.</li>
+															<li>Designed an algorithm for project collaborators to implement spatial analysis,
+																conversion, management, and map automation across 16+ landscapes, internationally.</li>
+															<li>Implemented traditional knowledge and country-specific policies with spatial and field data collection to
+																increase the effectiveness of long-term collaborative conservation goals.</li>
+															<li>Developed and cultivated strong rapports with local collaborators in
+																Nicaragua, Kenya, Italy.</li>
+															<li>Supported community-led conservation efforts;
+																learned local decision-making processes and needs.</li>
+															<li>Assisted with the implementation of field sampling and
+																training collaborators in field protocols.</li>
+															<li>Trained colleagues on GIS procedures and geodatabase management.</li>
+															<li>Responsible for administrating geospatial lab computer systems to facilitate program use.</li>
+															<li>Assisted with the international transportation of field equipment to and from new study sites.</li>
 														</ul>
 													</td>
 													<td style="text-align: center; vertical-align: middle;">May 2022<br> - <br>August 2022</td>
 												</tr>
 												<tr>
 													<td><ul>
+														<li>Optimized >4,500 GPS points; integrated with landscape-scale spatial analyses.</li>
+														<li>Used remotely sensed data to digitize landscape elements, classify land covers, and
+															assess forest and rangeland quality.</li>
 														<li>Developed models/tools and maintained record of troubleshooting and solutions for project
 															collaborators to implement spatial modelling approaches. </li>
 														<li>Assessed current GIS technologies; applied best and developed new processes for project objectives. </li>
@@ -204,21 +211,41 @@
 												<tr>
 													<td><b>Teaching Assistant</b> (UNT) <br>
 														<i>BIOL 1132 Environmental Science for Non-majors</i><br>
-													<ul><li>Promoted to lead TA in January 2022; aided in assessment and
+													<ul>
+														<li>Promoted to lead TA in January 2022; aided in assessment and
 														recommendations to achieve course efficacy.</li>
-													<li>Trained new TAs weekly to aid in their development and teaching successes.</li>
-													<li>Maintained responsibility for revising 10 modules to publish the 2nd edition course lab manual.</li>
-													<li>Achieved proficiency in effectively communicating technical content to non-technical audiences.</li>
-													<li>Supervised environmental sampling methods in a lab setting for 5-course sections with ~24 students.</li>
-													<li>Held weekly office hours and promptly updated grades.</li>
-													<li>Prepared weekly PowerPoints and learning materials; organized the online course for all TAs to use.</li>
-													</ul></td>
+														<li>Supervised environmental sampling methods in a lab setting for 5-course sections with ~24 students.</li>
+														<li>Measured dissolved oxygen content, contaminant levels,
+															and pH to analyze and compare municipal and pond water quality.</li>
+														<li>Measured nutrient levels, pH, soil structure/texture to analyze and compare soil health from
+															samples obtained from different land use types (e.g., restored prairie, farming, residential).</li>
+														<li>Planted native plants/seeds on 4 acres of a restored native tallgrass prairie.</li>
+														<li>Assessed aquatic habitat quality in local streams using biomonitors; collected/identified species
+														of benthic macroinvertebrates.</li>
+														<li>Assessed the influence varying levels of fertilizer and temperature has on dissolved oxygen content.</li>
+														<li>Assessed changes in the global climate over time (i.e., carbon dioxide levels, sea levels, global temperatures.</li>
+														<li>Trained new TAs weekly to aid in their development and teaching successes.</li>
+														<li>Maintained responsibility for revising 10 modules to publish the 2nd edition course lab manual.</li>
+														<li>Achieved proficiency in effectively communicating technical content to non-technical audiences.</li>
+														<li>Held weekly office hours and promptly updated grades.</li>
+														<li>Prepared weekly PowerPoints and learning materials; organized the online course for all TAs to use.</li>
+													</ul>
+													</td>
 													<td style="text-align: center; vertical-align: middle;">January 2022<br> - <br>December 2022</td>
 											</tr>
 													<tr>
 													<td><ul>
 														<li>Supervised environmental sampling methods in a lab setting for 6-course sections with ~24
 														students; held weekly office hours and promptly updated grades. </li>
+														<li>Measured dissolved oxygen content, contaminant levels,
+															and pH to analyze and compare municipal and pond water quality.</li>
+														<li>Measured nutrient levels, pH, soil structure/texture to analyze and compare soil health from
+															samples obtained from different land use types (e.g., restored prairie, farming, residential).</li>
+														<li>Planted native plants/seeds on 4 acres of a restored native tallgrass prairie.</li>
+														<li>Assessed aquatic habitat quality in local streams using biomonitors; collected/identified species
+														of benthic macroinvertebrates.</li>
+														<li>Assessed the influence varying levels of fertilizer and temperature has on dissolved oxygen content.</li>
+														<li>Assessed changes in the global climate over time (i.e., carbon dioxide levels, sea levels, global temperatures.</li>
 														<li>Maintained responsibility for weekly lab exercise prep following lab protocol for all TA sections.</li>
 														<li>Prepared weekly PowerPoint lectures and learning materials; revised weekly quizzes and exams.
 													</ul><td style="text-align: center; vertical-align: middle;">January 2021<br> - <br>December 2021</td>
@@ -245,19 +272,15 @@
 													<td><b>Graduate Thesis Research</b> (UNT) <br>
 														<i>Conservation, Connectivity, and Coexistence:
 														Understanding Corridor Efficacy in Fragmented Landscapes</i><br>
-														<ul><li>Collected, created, and analyzed geospatial data; maintained record of methods and troubleshooting.</li>
+														<ul>
 														<li>Used remotely sensed data to quantify and assess the composition of configuration of 3 landscapes.</li>
-														<li>Digitized landscape elements, classified land covers, assessed forest/rangeland quality.</li>
-														<li>Resistance-based connectivity modelling using cost distance and current flow.</li>
-														<li>Optimized >4,500 GPS points; integrated with landscape-scale spatial analyses.</li>
 														<li>Developed scripts for spatial/statistical analyses and uniform data visualization.</li>
-														<li>Implemented traditional knowledge and country-specific policies with spatial and field data collection to
-														increase the effectiveness of long-term collaborative conservation goals.</li>
+														<li>Resistance-based connectivity modelling using cost distance and current flow.</li>
 														<li>Assessed the degree to which the presence of corridor influences connectivity and small mammal
-														distribution when compared to isolates and intact reference areas.</li>
+														distribution when compared to isolated patches and intact reference areas composed of contigous
+															forest or rangeland habitat.</li>
 														<li>Applied existing and personally developed geospatial tools and methods to address critical knowledge
-														gaps in corridor ecology and understand the conservation value of corridors.</li>
-														<li>Managed spatial and non-spatial databases for international project team.</li></ul>
+														gaps in corridor ecology and understand the conservation value of corridors.</li></ul>
 													</td>
 													<td style="text-align: center; vertical-align: middle;">August 2022<br> - <br>December 2022</td>
 												</tr>
@@ -353,7 +376,7 @@
 													<td style="text-align: center; vertical-align: middle;">December 2022<br> - <br>January 2023</td>
 												</tr>
 												<tr>
-													<td><b>Global Corridor Efficacy Assessment</b> (UNT)<br>
+													<td><b>Global Corridor Efficacy Assessment</b> • <i><b><a href="https://www.docorridorswork.com/">Do Corridors Work?</a></i></b> (UNT)<br>
 														 <i>Managua, Nicaragua</i><br>
 														<ul><li>Established and maintained working relationships with partners in academia and local communities.</li>
 														<li>Supported community-led conservation efforts; learned local decision-making processes and needs.</li>
@@ -474,8 +497,6 @@
 										</table>
 									</div>
 								</section>
-
-
 <hr />
 
 				<!-- Footer -->
