--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<li><a href="https://amandamlong.github.io/About/">About</a></li>
 					<li><a href="https://amandamlong.github.io/Portfolio/">Portfolio</a></li>
 					<li><a href="https://amandamlong.github.io/CV/">CV</a></li>
-					<li><a href="https://amandamlong.github.io/Adventures/">Adventures</a></li>
+					<li><a href="https://amandamlong.github.io/TravelMap/">Adventures</a></li>
 				</ul></nav>
 		</header>
 
