--- a/index.html
+++ b/index.html
@@ -1,34 +1,32 @@
 <!DOCTYPE HTML>
 
 <html>
-	<head>
-		<title>AML-CV</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<!-- user-scalable=no: website does NOT allow user to Zoom -->
-		<!-- user-scalable=no: website DOES allow user to Zoom -->
-		<link rel="stylesheet" href="assets/css/CV.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
-	<div id="wrapper">
+<head>
+	<title>AML- CV</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/CV.css" />
+	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
 
-		<!-- Header -->
-		<header id="header">
-			<div class="inner">
-				<a href="https://amandamlong.github.io" class="logo">
-					<span class="symbol"><img src="pagelines.svg" alt="" /></span>
-					<span class="title">Amanda M Long</span>
-				</a>
+<body class="is-preload">
+<div id="wrapper">
 
-				<!-- Nav -->
-				<nav><ul>
-					<li><a href="https://amandamlong.github.io/About/">About</a></li>
-					<li><a href="https://amandamlong.github.io/Portfolio/">Portfolio</a></li>
-					<li><a href="https://amandamlong.github.io/CV/">CV</a></li>
-					<li><a href="https://amandamlong.github.io/TravelMap/">Adventures</a></li>
-				</ul></nav>
-		</header>
+	<!-- Header -->
+	<header id="header">
+		<div class="inner">
+			<a href="https://amandamlong.github.io" class="logo">
+				<span class="symbol"><img src="pagelines.svg" alt="" /></span>
+				<span class="title">Amanda M Long</span>
+			</a>
+			<!-- Nav -->
+			<nav><ul>
+				<li><a href="https://amandamlong.github.io/About/">About</a></li>
+				<li><a href="https://amandamlong.github.io/Portfolio/">Portfolio</a></li>
+				<li><a href="https://amandamlong.github.io/CV/">CV</a></li>
+				<li><a href="https://amandamlong.github.io/TravelMap/">Adventures</a></li>
+			</ul></nav>
+	</header>
 
 		<!-- Main -->
 		<div id="main">
@@ -51,9 +49,9 @@
 									<h4>Qualifications</h4>
 									<div class="table-wrapper">
 										<table>
-											<col style="width:33%">
-											<col style="width:33%">
-											<col style="width:33%">
+											<col style="width:30%">
+											<col style="width:39%">
+											<col style="width:30%">
 											<thead>
 												<tr>
 												</tr>
@@ -63,12 +61,12 @@
 													<td style="text-align: center; vertical-align: middle;">
 													Geospatial Analysis <br>
 														Remote Sensing <br>
-														Python, SQL, R, HTML
+														Programming
 													</td>
 													<td style="text-align: center; vertical-align: middle;">
-														Data Management | Spatial & Non-spatial <br>
+														Data Management <br>
 														Data Analysis & Visualization <br>
-														Presentation Development <br>
+														Environmental Impact Assessments<br>
 													<td style="text-align: center; vertical-align: middle;">
 													Science Communication <br>
 													Field Data Collection <br>
@@ -353,7 +351,6 @@
 												<tr>
 												</tr>
 											</thead>
-											<tr>
 												<tr>
 													<td><b>National Science Foundation – International Research Experience for Students</b> (UNT) <br>
 														<i>Sub-Antarctic Biocultural Conservation • Cape Horn Biosphere Reserve, Chile</i><br>
@@ -456,13 +453,11 @@
 												</tr>
 											</thead>
 											<tbody>
-												<tr>
 													<td>
 														<p class="hangingindent">Baxter-Slye J with Contributions from <b>Long AM</b>, Kalta B (2022).
 															Field & laboratory methods for environmental science for non-majors (2nd edition).
 															Department of Biological Sciences at University of North Texas. Kendall Hunt Publishing.</p>
 														</td>
-												</tr>
 											</tfoot>
 										</table>
 									</div>
@@ -481,12 +476,13 @@
 											</thead>
 											<tbody>
 												<tr>
-													<td><b>MMC Third Annual Student Showcase</b> (MMC)<br>
+													<td>
+														<b>MMC Third Annual Student Showcase</b> (MMC)<br>
 														<p class="hangingindent"><b>Long AM</b>, Lombard A, Johnson L, Wagner J. Mice DNA barcoding.</p>
 															<p class="indent">*Received Student Showcase Award></p>
 														</td>
 													<td style="text-align: center; vertical-align: middle;">April 2018</td>
-													</tr>
+												</tr>
 												<tr>
 													<td><b>MMC Science Department</b> (MMC)<br>
 														<p class="hangingindent"><b>Long AM</b>, Lombard A, Wagner J. The effect different concentrations of NaCl has on plant root peroxidase.</p>
@@ -511,7 +507,7 @@
 
 							</section>
 							<ul class="copyright">
-								<p>&copy; 2023 Amanda Long </a></p>
+								<p>&copy; 2023 Amanda M Long </a></p>
 							</ul>
 						</div>
 					</footer>
