--- a/EIA.html
+++ b/EIA.html
@@ -38,7 +38,7 @@
 				<!-- PORTFOLIO -->
 							<section>
 								<span class="pdf-word">
-									<embed src="EIA Course Portfolio - AML.pdf#toolbar=0" type="application/pdf"
+									<embed src="docs\EIA Course Portfolio - AML.pdf#toolbar=0" type="application/pdf"
 										   height="625px" width="500px">
 								</span>
 								<p><center>The BIOL 5100 Environmental Impact Assessment (EIA) course portfolio is a compilation of
@@ -75,7 +75,7 @@
 									</dd>
 								</dl>
 								<span class="pdf-ppt">
-									<embed src="Isle Royale National Park EIS.pdf#toolbar=0" type="application/pdf"
+									<embed src="docs\Isle Royale National Park EIS.pdf#toolbar=0" type="application/pdf"
 																 height="275px" width="500">
 								</span>
 								<p><center>Wolves naturally colonized Isle Royale National Park, an island archipelago located in
